k8s/apps/docs/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs-service
  namespace: cwx
spec:
  selector:
    app: docs-service
  ports:
  - port: 80
    targetPort: 80
